@@ -36,7 +36,8 @@ should also work with other window managers. It's based on ttm code. The goal is
 compliance with freedesktop specifications.
 .PP
 On the first startup tint2 creates a config file in $HOME/.config/tint2/tint2rc.
-See the /usr/share/tint2/doc directory for more information.
+See the /usr/share/doc/tint2 directory for more information.
+Or the wiki page on http://code.google.com/p/tint2/wiki/Welcome
 .SH OPTIONS
 .TP
 .B \-c config-file
